// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transaction Transaction create when called with a valid transaction should return created tx 1`] = `
Array [
  Object {
    "data": Array [
      142,
      63,
      76,
      225,
      230,
      221,
      48,
      163,
      28,
      32,
      167,
      106,
      182,
      106,
      33,
      91,
      114,
      232,
      242,
      20,
      48,
      137,
      145,
      28,
      128,
      59,
      137,
      244,
      212,
      49,
      254,
      78,
      20,
      106,
      134,
      66,
      181,
      59,
      58,
      161,
      16,
      31,
      185,
      148,
      133,
      124,
      247,
      147,
      126,
      143,
      44,
      111,
      153,
      237,
      131,
      96,
      219,
      134,
      254,
      38,
      43,
      135,
      158,
      11,
    ],
    "type": "Buffer",
  },
]
`;

exports[`transaction Transaction create when called with multi-signature account in input should return created tx 1`] = `
Array [
  Object {
    "data": Array [
      142,
      63,
      76,
      225,
      230,
      221,
      48,
      163,
      28,
      32,
      167,
      106,
      182,
      106,
      33,
      91,
      114,
      232,
      242,
      20,
      48,
      137,
      145,
      28,
      128,
      59,
      137,
      244,
      212,
      49,
      254,
      78,
      20,
      106,
      134,
      66,
      181,
      59,
      58,
      161,
      16,
      31,
      185,
      148,
      133,
      124,
      247,
      147,
      126,
      143,
      44,
      111,
      153,
      237,
      131,
      96,
      219,
      134,
      254,
      38,
      43,
      135,
      158,
      11,
    ],
    "type": "Buffer",
  },
  Object {
    "data": Array [],
    "type": "Buffer",
  },
]
`;

exports[`transaction Transaction create when called with nonce equal to zero in input should return created tx 1`] = `
Array [
  Object {
    "data": Array [
      213,
      41,
      81,
      89,
      78,
      131,
      114,
      241,
      106,
      63,
      52,
      237,
      204,
      195,
      225,
      154,
      195,
      189,
      130,
      20,
      196,
      204,
      121,
      218,
      187,
      200,
      176,
      156,
      150,
      202,
      199,
      45,
      233,
      62,
      6,
      243,
      49,
      50,
      144,
      109,
      178,
      84,
      153,
      244,
      163,
      237,
      103,
      35,
      131,
      176,
      203,
      85,
      31,
      146,
      226,
      139,
      188,
      59,
      242,
      122,
      129,
      28,
      164,
      15,
    ],
    "type": "Buffer",
  },
]
`;

exports[`transaction Transaction create when called with optional keys in input should return created tx 1`] = `
Array [
  Object {
    "data": Array [
      142,
      63,
      76,
      225,
      230,
      221,
      48,
      163,
      28,
      32,
      167,
      106,
      182,
      106,
      33,
      91,
      114,
      232,
      242,
      20,
      48,
      137,
      145,
      28,
      128,
      59,
      137,
      244,
      212,
      49,
      254,
      78,
      20,
      106,
      134,
      66,
      181,
      59,
      58,
      161,
      16,
      31,
      185,
      148,
      133,
      124,
      247,
      147,
      126,
      143,
      44,
      111,
      153,
      237,
      131,
      96,
      219,
      134,
      254,
      38,
      43,
      135,
      158,
      11,
    ],
    "type": "Buffer",
  },
  Object {
    "data": Array [],
    "type": "Buffer",
  },
]
`;

exports[`transaction Transaction create when called without sender public key in input should return created tx 1`] = `
Array [
  Object {
    "data": Array [
      142,
      63,
      76,
      225,
      230,
      221,
      48,
      163,
      28,
      32,
      167,
      106,
      182,
      106,
      33,
      91,
      114,
      232,
      242,
      20,
      48,
      137,
      145,
      28,
      128,
      59,
      137,
      244,
      212,
      49,
      254,
      78,
      20,
      106,
      134,
      66,
      181,
      59,
      58,
      161,
      16,
      31,
      185,
      148,
      133,
      124,
      247,
      147,
      126,
      143,
      44,
      111,
      153,
      237,
      131,
      96,
      219,
      134,
      254,
      38,
      43,
      135,
      158,
      11,
    ],
    "type": "Buffer",
  },
]
`;

exports[`transaction Transaction decode transaction from input as buffer should return decoded transaction 1`] = `
Object {
  "asset": Object {
    "amount": 10000000n,
    "data": "",
    "recipientAddress": Object {
      "data": Array [
        101,
        64,
        135,
        194,
        223,
        135,
        4,
        2,
        171,
        11,
        25,
        150,
        97,
        111,
        211,
        53,
        93,
        97,
        246,
        44,
      ],
      "type": "Buffer",
    },
  },
  "assetID": 0,
  "fee": 10000000n,
  "id": Object {
    "data": Array [
      221,
      147,
      228,
      202,
      91,
      72,
      208,
      182,
      4,
      231,
      207,
      46,
      87,
      206,
      33,
      190,
      67,
      163,
      22,
      63,
      133,
      60,
      131,
      216,
      141,
      56,
      48,
      50,
      253,
      131,
      11,
      191,
    ],
    "type": "Buffer",
  },
  "moduleID": 2,
  "nonce": 54n,
  "senderPublicKey": Object {
    "data": Array [
      221,
      79,
      242,
      85,
      254,
      4,
      221,
      1,
      89,
      164,
      104,
      233,
      233,
      200,
      135,
      44,
      79,
      68,
      102,
      34,
      15,
      126,
      50,
      99,
      119,
      160,
      206,
      185,
      223,
      47,
      162,
      26,
    ],
    "type": "Buffer",
  },
  "signatures": Array [
    Object {
      "data": Array [
        121,
        203,
        41,
        220,
        167,
        187,
        159,
        206,
        115,
        161,
        232,
        202,
        40,
        38,
        79,
        119,
        144,
        116,
        210,
        89,
        195,
        65,
        181,
        54,
        186,
        233,
        165,
        76,
        10,
        46,
        71,
        19,
        88,
        15,
        203,
        25,
        47,
        159,
        21,
        244,
        55,
        48,
        101,
        13,
        105,
        187,
        31,
        61,
        207,
        180,
        203,
        109,
        167,
        214,
        156,
        169,
        144,
        167,
        99,
        237,
        120,
        86,
        151,
        0,
      ],
      "type": "Buffer",
    },
  ],
}
`;

exports[`transaction Transaction decode transaction from input as hex should return decoded transaction 1`] = `
Object {
  "asset": Object {
    "amount": 10000000n,
    "data": "",
    "recipientAddress": Object {
      "data": Array [
        101,
        64,
        135,
        194,
        223,
        135,
        4,
        2,
        171,
        11,
        25,
        150,
        97,
        111,
        211,
        53,
        93,
        97,
        246,
        44,
      ],
      "type": "Buffer",
    },
  },
  "assetID": 0,
  "fee": 10000000n,
  "id": Object {
    "data": Array [
      221,
      147,
      228,
      202,
      91,
      72,
      208,
      182,
      4,
      231,
      207,
      46,
      87,
      206,
      33,
      190,
      67,
      163,
      22,
      63,
      133,
      60,
      131,
      216,
      141,
      56,
      48,
      50,
      253,
      131,
      11,
      191,
    ],
    "type": "Buffer",
  },
  "moduleID": 2,
  "nonce": 54n,
  "senderPublicKey": Object {
    "data": Array [
      221,
      79,
      242,
      85,
      254,
      4,
      221,
      1,
      89,
      164,
      104,
      233,
      233,
      200,
      135,
      44,
      79,
      68,
      102,
      34,
      15,
      126,
      50,
      99,
      119,
      160,
      206,
      185,
      223,
      47,
      162,
      26,
    ],
    "type": "Buffer",
  },
  "signatures": Array [
    Object {
      "data": Array [
        121,
        203,
        41,
        220,
        167,
        187,
        159,
        206,
        115,
        161,
        232,
        202,
        40,
        38,
        79,
        119,
        144,
        116,
        210,
        89,
        195,
        65,
        181,
        54,
        186,
        233,
        165,
        76,
        10,
        46,
        71,
        19,
        88,
        15,
        203,
        25,
        47,
        159,
        21,
        244,
        55,
        48,
        101,
        13,
        105,
        187,
        31,
        61,
        207,
        180,
        203,
        109,
        167,
        214,
        156,
        169,
        144,
        167,
        99,
        237,
        120,
        86,
        151,
        0,
      ],
      "type": "Buffer",
    },
  ],
}
`;

exports[`transaction Transaction sign when called with multi-signature account in input should return created tx 1`] = `
Array [
  Object {
    "data": Array [
      142,
      63,
      76,
      225,
      230,
      221,
      48,
      163,
      28,
      32,
      167,
      106,
      182,
      106,
      33,
      91,
      114,
      232,
      242,
      20,
      48,
      137,
      145,
      28,
      128,
      59,
      137,
      244,
      212,
      49,
      254,
      78,
      20,
      106,
      134,
      66,
      181,
      59,
      58,
      161,
      16,
      31,
      185,
      148,
      133,
      124,
      247,
      147,
      126,
      143,
      44,
      111,
      153,
      237,
      131,
      96,
      219,
      134,
      254,
      38,
      43,
      135,
      158,
      11,
    ],
    "type": "Buffer",
  },
  Object {
    "data": Array [
      125,
      251,
      192,
      234,
      222,
      176,
      53,
      65,
      207,
      190,
      10,
      123,
      252,
      141,
      191,
      61,
      31,
      7,
      188,
      35,
      215,
      5,
      81,
      28,
      56,
      105,
      12,
      1,
      6,
      236,
      137,
      186,
      96,
      52,
      171,
      169,
      172,
      161,
      52,
      227,
      37,
      236,
      32,
      8,
      138,
      89,
      24,
      185,
      190,
      19,
      175,
      185,
      136,
      14,
      5,
      226,
      121,
      21,
      15,
      150,
      145,
      11,
      218,
      8,
    ],
    "type": "Buffer",
  },
]
`;

exports[`transaction Transaction sign when called with optional keys in input should return created tx 1`] = `
Array [
  Object {
    "data": Array [
      142,
      63,
      76,
      225,
      230,
      221,
      48,
      163,
      28,
      32,
      167,
      106,
      182,
      106,
      33,
      91,
      114,
      232,
      242,
      20,
      48,
      137,
      145,
      28,
      128,
      59,
      137,
      244,
      212,
      49,
      254,
      78,
      20,
      106,
      134,
      66,
      181,
      59,
      58,
      161,
      16,
      31,
      185,
      148,
      133,
      124,
      247,
      147,
      126,
      143,
      44,
      111,
      153,
      237,
      131,
      96,
      219,
      134,
      254,
      38,
      43,
      135,
      158,
      11,
    ],
    "type": "Buffer",
  },
  Object {
    "data": Array [
      125,
      251,
      192,
      234,
      222,
      176,
      53,
      65,
      207,
      190,
      10,
      123,
      252,
      141,
      191,
      61,
      31,
      7,
      188,
      35,
      215,
      5,
      81,
      28,
      56,
      105,
      12,
      1,
      6,
      236,
      137,
      186,
      96,
      52,
      171,
      169,
      172,
      161,
      52,
      227,
      37,
      236,
      32,
      8,
      138,
      89,
      24,
      185,
      190,
      19,
      175,
      185,
      136,
      14,
      5,
      226,
      121,
      21,
      15,
      150,
      145,
      11,
      218,
      8,
    ],
    "type": "Buffer",
  },
]
`;
